# muduo-cross-platform

./: .clang-tidy  .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  ChangeLog  ChangeLog2  DownloadProject.cmake  License  Makefile  README  README.md  autogen.sh  build.sh  clean.sh  make.sh  runtest.sh  vcxproj2mk.sh
contrib/: CMakeLists.txt
contrib/hiredis/: CMakeLists.txt  Hiredis.cc  Hiredis.h  README.md  mrediscli.cc
contrib/thrift/: CMakeLists.txt  ThriftConnection.cc  ThriftConnection.h  ThriftServer.cc  ThriftServer.h
examples/: CMakeLists.txt
examples/cdns/: CMakeLists.txt  Resolver.cc  Resolver.h  dns.cc
examples/curl/: CMakeLists.txt  Curl.cc  Curl.h  README  download.cc  mcurl.cc
examples/fastcgi/: CMakeLists.txt  fastcgi.cc  fastcgi.h  fastcgi_test.cc  nginx.conf
examples/filetransfer/: CMakeLists.txt  download.cc  download2.cc  download3.cc
examples/hub/: CMakeLists.txt  README  codec.cc  codec.h  hub.cc  pub.cc  pubsub.cc  pubsub.h  sub.cc
examples/idleconnection/: CMakeLists.txt  echo.cc  echo.h  main.cc  (+1 more)
examples/protobuf/codec/: CMakeLists.txt  client.cc  codec.cc  codec.h  codec_test.cc  dispatcher.h  dispatcher_lite.h  dispatcher_lite_test.cc  dispatcher_test.cc  query.proto  server.cc
examples/protobuf/resolver/: CMakeLists.txt  client.cc  resolver.proto  server.cc
examples/protobuf/rpc/: CMakeLists.txt  client.cc  server.cc  sudoku.proto
examples/protobuf/rpcbench/: CMakeLists.txt  client.cc  echo.proto  server.cc
muduo/base/: AsyncLogging.cc  Atomic.h  BlockingQueue.h  BoundedBlockingQueue.h  CMakeLists.txt  Condition.cc  Condition.h  CountDownLatch.cc  CrossPlatformAdapterFunction.cc  CrossPlatformAdapterFunction.h  CurrentThread.cc  CurrentThread.h  FileUtil.cc  FileUtil.h  LogFile.cc  LogStream.cc  Logging.cc  Logging.h  Mutex.h  ProcessInfo.cc  ProcessInfo.h  Thread.cc  Thread.h  ThreadLocal.h  ThreadPool.cc  TimeZone.cc  Timestamp.cc  Timestamp.h  process_info.cpp  process_info.h
muduo/base/tests/: CMakeLists.txt  Date_unittest.cc
muduo/base/tests/asyncloggingtest/: AsyncLoggingTest.cc  AsyncLoggingTest.sln  AsyncLoggingTest.vcxproj.filters  asyncloggingtest.vcxproj
muduo/base/tests/blockingqueuetest/: BlockingQueueTest.cc  BlockingQueueTest.sln  BlockingQueueTest.vcxproj.filters  blockingqueuetest.vcxproj
muduo/base/tests/boundedblockingqueuetest/: BoundedBlockingQueueTest.cc  BoundedBlockingQueueTest.sln  BoundedBlockingQueueTest.vcxproj.filters  boundedblockingqueuetest.vcxproj
muduo/base/tests/countdownlatchtest/: CountDownLatchTest.cc  CountDownLatchTest.sln  CountDownLatchTest.vcxproj.filters  countdownlatchtest.vcxproj
muduo/base/tests/datetest/: DateTest.cc  DateTest.sln  DateTest.vcxproj.filters  datetest.vcxproj
muduo/base/tests/exceptiontest/: ExceptionTest.cc  ExceptionTest.sln  ExceptionTest.vcxproj.filters  exceptiontest.vcxproj
muduo/base/tests/fileutiltest/: FileUtilTest.cc  FileUtilTest.sln  FileUtilTest.vcxproj.filters  ReadMe.txt  fileutiltest.vcxproj
muduo/base/tests/logfiletest/: LogFileTest.cc  LogFileTest.sln  LogFileTest.vcxproj.filters  logfiletest.vcxproj
muduo/base/tests/logstreambench/: LogStreamBench.cc  LogStreamBench.sln  LogStreamBench.vcxproj.filters  logstreambench.vcxproj
muduo/base/tests/logstreamtest/: LogStreamTest.cc  LogStreamTest.sln  LogStreamTest.vcxproj.filters  logstreamtest.vcxproj
muduo/base/tests/threadbench/: ThreadBench.cc  ThreadBench.sln  ThreadBench.vcxproj.filters  threadbench.vcxproj
muduo/base/tests/threadpooltest/: ThreadPoolTest.cc  ThreadPoolTest.sln  ThreadPoolTest.vcxproj.filters  threadpooltest.vcxproj
muduo/base/tests/threadtest/: ThreadTest.cc  ThreadTest.sln  ThreadTest.vcxproj.filters  threadtest.vcxproj
muduo/base/tests/timestamptest/: TimestampTest.cc  TimestampTest.filters  TimestampTest.sln  timestamptest.vcxproj
muduo/base/tests/timezonetest/: TimeZoneTest.cc  TimeZoneTest.sln  TimeZoneTest.vcxproj.filters  timezonetest.vcxproj
muduo/net/protobuf/: CMakeLists.txt  ProtobufCodecLite.cc
muduo/net/protorpc/: CMakeLists.txt  RpcChannel.cc  RpcCodec.cc  autogen.bat  rpc.proto  rpcservice.proto
muduo/net/tests/: CMakeLists.txt
muduo/net/tests/bufferunittest/: BufferUnittest.cc  BufferUnittest.sln  BufferUnittest.vcxproj.filters  bufferunittest.vcxproj
muduo/net/tests/channeltest/: ChannelTest.cc  ChannelTest.sln  ChannelTest.vcxproj.filters  channeltest.vcxproj
muduo/net/tests/echoclientunittest/: EchoClientUnitTest.cc  EchoClientUnitTest.sln  EchoClientUnitTest.vcxproj.filters  echoclientunittest.vcxproj
muduo/net/tests/echoserverunittest/: EchoServerUnitTest.cc  EchoServerUnitTest.sln  EchoServerUnitTest.vcxproj.filters  echoserverunittest.vcxproj
muduo/net/tests/eventloopthreadpoolunittest/: EventLoopThreadPoolUnitTest.cc  EventLoopThreadPoolUnitTest.sln  EventLoopThreadPoolUnitTest.vcxproj.filters  eventloopthreadpoolunittest.vcxproj
muduo/net/tests/eventloopthreadunittest/: EventLoopThreadUnitTest.cc  EventLoopThreadUnitTest.sln  EventLoopThreadUnitTest.vcxproj.filters  eventloopthreadunittest.vcxproj
muduo/net/tests/eventloopunittest/: EventLoopUnitTest.cc  EventLoopUnitTest.sln  EventLoopUnitTest.vcxproj.filters  eventloopunittest.vcxproj
muduo/net/tests/inetaddressunittest/: InetAddressUnitTest.cc  InetAddressUnitTest.sln  InetAddressUnitTest.vcxproj.filters  inetaddressunittest.vcxproj
muduo/net/tests/tcpclientreg1/: TcpClientReg1.cc  TcpClientReg1.sln  TcpClientReg1.vcxproj.filters  tcpclientreg1.vcxproj
muduo/net/tests/tcpclientreg2/: TcpClientReg2.cc  TcpClientReg2.sln  TcpClientReg2.vcxproj.filters  tcpclientreg2.vcxproj
muduo/net/tests/tcpclientreg3/: TcpClientReg3.cc  TcpClientReg3.sln  TcpClientReg3.vcxproj.filters  tcpclientreg3.vcxproj
muduo/net/tests/timerqueueunittest/: TimerQueueUnitTest.cc  TimerQueueUnitTest.sln  TimerQueueUnitTest.vcxproj.filters  timerqueueunittest.vcxproj
muduo/net/tests/zlibstreamunittest/: ZlibStreamUnitTest.cc  ZlibStreamUnitTest.sln  ZlibStreamUnitTest.vcxproj.filters  zlibstreamunittest.vcxproj
patches/: MacOSX.diff  armlinux.diff  backport.diff
(+191 files in other folders)
